--- a/bower.json
+++ b/bower.json
@@ -28,8 +28,6 @@
   "dependencies": {
     "bourbon": "~4.2.4",
     "neat": "~1.7.2", 
-    "ionicons": "~2.0.1", 
-    "normalize-scss": "~3.0.3", 
-    "jquery": "2.1.4"
+    "normalize-scss": "~3.0.3"
   }
 }
