remove editor + linenumbers, rename global tabs to tabbar, rename the bower module to united-styles

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "united styles",
+  "name": "united-styles",
   "version": "0.0.0",
   "authors": [
     "Franz Wilding <franz@2robots.at>"
